Bug 44174 - FILESAVE: RTF import - defective RTF generation, \titlepg missing
Summary: FILESAVE: RTF import - defective RTF generation, \titlepg missing
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta1
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: BSA target:3.6.0 target:3.5.5
Keywords: filter:rtf, regression
: 44175 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-12-27 04:01 UTC by s-joyemusequna
Modified: 2024-12-06 04:22 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
ODT file, which shows the problem if save as RTF with LibO 3.5 Beta2 (9.18 KB, application/vnd.oasis.opendocument.text)
2011-12-27 04:01 UTC, s-joyemusequna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description s-joyemusequna 2011-12-27 04:01:34 UTC
Created attachment 54842 [details]
ODT file, which shows the problem if save as RTF with LibO 3.5 Beta2

Problem description: If first page has a special format, p.ex. no page number, LibO 3.5 Beta1 and Beta2 generate no \titlepg. If we open this file with LibO 3.4, LibO 3.5 or MS Word 2007, then a page number on the first page is displayed. This should not be the case.

Steps to reproduce:
1. save attached file as RTF with LibO 3.4
2. save attached file as RTF with LibO 3.5 Beta2
3. open file 1 and file 2 (file 1 is correct, file 2
displays page number on the first page)

Current behavior:
file saved with LibO 3.5 Beta2 displays page number on the first page - wrong behaviour

Expected behavior:
file does not display page number on the first page

Platform (if different from the browser): Windows Vista 64, Windows XP
              
Browser: Mozilla/5.0 (Windows NT 6.0; WOW64; rv:9.0) Gecko/20100101 Firefox/9.0
Comment 1 s-joyemusequna 2011-12-27 04:12:09 UTC
*** Bug 44175 has been marked as a duplicate of this bug. ***
Comment 2 Jean-Baptiste Faure 2012-01-11 05:09:26 UTC
Indeed the RTF file produced by LO 3.5.0 beta3+ has a page number on the first page whereas the ODF original file does not. So setting this buf-report to NEW.

Miklos: do you know this tag \titlepg ? Please fell free to reassign if you cannot handle this bug.

Best regards. JBF
Comment 3 Miklos Vajna 2012-05-10 08:31:36 UTC
s-joyemusequna,

Can you say in what version did this work fine, given that it seems you flagged this as a regression?

Thanks,

Miklos
Comment 4 s-joyemusequna 2012-05-10 09:26:25 UTC
Version 3.4.5 (tested under Windows XP) works fine, that is, page one has no page number.

Version 3.5.3 and version 3.6.0alpha0+ (Build ID: 34513fe) don't work anymore.

Thanks for your work, version 3.6 grows better and better.
Comment 5 Not Assigned 2012-05-11 01:14:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b22749fd9f9cd9206549367d2b619690b87414fc

fdo#44174 RTF_TITLEPG when title page has no header
Comment 6 Miklos Vajna 2012-05-11 01:16:44 UTC
Resolved in master, marking as such.
Comment 7 s-joyemusequna 2012-05-19 02:28:37 UTC
Verified with LOdev 3.6 (master - 18-May-2012 02h44 x86@6-fast; Build ID: 8b1d29b) under Windows Vista 64.
Comment 8 Not Assigned 2012-05-29 02:52:59 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "libreoffice-3-5":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f1bb52a221448877571e727b0d1d71577ef6900b&g=libreoffice-3-5

fdo#44174 RTF_TITLEPG when title page has no header


It will be available in LibreOffice 3.5.5.
Comment 9 Robinson Tryon (qubit) 2015-12-17 11:53:08 UTC Comment hidden (obsolete)