fdo#44174 RTF_TITLEPG when title page has no header

Change-Id: Ida6566b38ceaca30441a029c73bd1f52d93bbb3b